syntax = "proto3";

option csharp_namespace = "GrpcAuthService";

service AuthService {
  rpc ValidateToken (TokenRequest) returns (TokenResponse);
}

message TokenRequest {
  string token = 1;
}

message TokenResponse {
  bool is_valid = 1;
  string user_id = 2;
  string role = 3;
}
